<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".Activities.PerfilConfiguracionActivity">

    <TextView
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/textView3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cambie_su_configuraci_n_de_perfil_aqu"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/botonCambiaDatos"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_mis_datos"
        android:background="@drawable/mybutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/botonCambiaContrasenia"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_mi_contrase_a"
        android:background="@drawable/mybutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/botonExportarDatos"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="267dp"
        android:layout_height="43dp"
        android:background="@drawable/mybutton"
        android:text="@string/exportar_datos_de_dressmeapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/botonBorrarPerfil"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/borrar_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />
</androidx.constraintlayout.widget.ConstraintLayout>