<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".Activities.AlgoritmoRecomendadorActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:text="@string/nombre_del_evento"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_nombre_evento"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ej_cumplea_os_de_paco"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:text="@string/formalidad_del_evento"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_formalidad_evento"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:text="@string/tiempo_que_har_en_el_evento"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_temperatura_evento"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:textSize="24sp" />


        <Button
            android:id="@+id/boton_recomiendame"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:scrollbarDefaultDelayBeforeFade="400"

            android:text="@string/recomiendame"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>